tests/example-projects/failing/no-test/tests/Tests.elm
module Tests exposing (..)

import Test exposing (Test)


a =
    42
